# malina

./: .coveralls.yml  .gitignore  .gitmodules  .travis.yml  .travis.ymly  CMakeLists.txt  README.md  codecov.yml  config.yml  git.sh  make_unit_test.sh  out.txt  pliki.cpp  ss
iDom_server_OOP/: .~lock.wiadomosci.ods#  CMakeLists.txt  err.txt  iDom_server_OOP  iDom_server_OOP.pro  iDom_server_OOP.pro.user.2.6pre1  iDom_server_OOP.pro.user.3.3-pre1  iDom_server_OOP.pro.user.42451ab  wiadomosci.ods
iDom_server_OOP/arduPi/: arduPi.cpp  arduPi.h
iDom_server_OOP/arduino/EasySwitch_sensors/: EasySwitch_sensors.cpp  EasySwitch_sensors.h
iDom_server_OOP/arduino/arduino-multi-relay2-own/: platformio.ini
iDom_server_OOP/arduino/arduino-multi-relay2-own/include/: Button.h  Relay.h  config.h
iDom_server_OOP/arduino/arduino-multi-relay2-own/src/: Button.cpp  main.cpp
iDom_server_OOP/arduino/arduino_iDom/arduino_iDom_new_ino/: arduino_iDom_new_ino.ino
iDom_server_OOP/arduino/arduino_iDom_clock/: SevSeg.cpp  arduino_iDom_clock.ino
iDom_server_OOP/arduino/deprecated/arduino_iDom/: LED.h
iDom_server_OOP/arduino/light_iDom/: light_iDom.cpp  light_iDom.h  light_iDom.ino  light_iDom_handler.cpp  light_iDom_handler.h
iDom_server_OOP/arduino/nbox/: nbox.ino  nbox_api.h
iDom_server_OOP/cmake/iDom_server-CMAKE/: .gitignore  CMakeCache.txt.prev  CMakeLists.txt  cmake_install.cmake  iDom_server-CMAKE  iDom_server-CMAKE.backup
iDom_server_OOP/docker/: CMakeLists.txt  iDom_server-docker-CMAKE  serialpi.cpp  serialpi.h
iDom_server_OOP/docker/deploy/: compose.yaml
iDom_server_OOP/json2/: json.hpp
iDom_server_OOP/liquidcrystal_i2c-for-ardupi/: LCD.cpp  LCD.h  LiquidCrystal_I2C.cpp  LiquidCrystal_I2C.cpp.depr  LiquidCrystal_I2C.h.depr2
iDom_server_OOP/liquidcrystal_i2c-for-ardupii/: LiquidCrystal_I2C.h
iDom_server_OOP/script/: watchdog.py  watchdog.sh
iDom_server_OOP/script/PYTHON/: gadacz.py  iDom_movie.py  sl.sh
iDom_server_OOP/src/: check.sh  err.txt  iDom_server_OOP.cpp  iDom_server_OOP.h  idom_api.h  main.cpp
iDom_server_OOP/src/433MHz/: rc_433mhz.cpp  rc_433mhz.h
iDom_server_OOP/src/BIT_TEST/: bit_main.cpp
iDom_server_OOP/src/CRON/: cron.cpp  cron.hpp
iDom_server_OOP/src/HOUSE/: house_room_handler.cpp  house_room_handler.h  light_bulb.cpp  light_bulb.h  room.cpp  room.h
iDom_server_OOP/src/HTTP/: http.cpp  http.h
iDom_server_OOP/src/KEY/: key.cpp  key.h
iDom_server_OOP/src/LCD_c/: cyniu  lcd_c.cpp  lcd_c.h  main.cpp
iDom_server_OOP/src/MENU/: menu.cpp  menu.h  menu_base.cpp  menu_base.h  menu_buderus.cpp  menu_buderus.h  menu_info.cpp  menu_info.h  menu_kodi.cpp  menu_kodi.h  menu_light.cpp  menu_light.h  menu_main.cpp  menu_main.h  menu_maintenance.cpp  menu_maintenance.h  menu_music.cpp  menu_music.h  menu_root.cpp  menu_root.h  menu_state_machine.cpp  menu_state_machine.h  menu_volume.cpp  menu_volume.h  state_machine.cpp  state_machine.h
iDom_server_OOP/src/RADIO_433_eq/: radio_433_eq.cpp  radio_433_eq.h  radio_button.cpp  radio_button.h
iDom_server_OOP/src/SATEL_INTEGRA/: satel_enum.h  satel_integra.cpp  satel_integra.h  satel_integra_handler.cpp  satel_integra_handler.h  satel_integra_interface.h
iDom_server_OOP/src/SerialPi/: serialpi.cpp  serialpi.h
iDom_server_OOP/src/TASKER/: tasker.cpp  tasker.h
iDom_server_OOP/src/THERMOMETER_CONTAINER/: thermometer_container.cpp  thermometer_container.h
iDom_server_OOP/src/blockQueue/: blockqueue.cpp  blockqueue.cpp.autosave  blockqueue.h
iDom_server_OOP/src/buderus/: buderus.cpp  buderus.h  buderus_interface.h
iDom_server_OOP/src/c_connection/: c_connection.cpp  c_connection.h  c_connection2.cpp  c_connection_node.cpp
iDom_server_OOP/src/c_irda_logic/: c_irda_logic.cpp  c_irda_logic.h
iDom_server_OOP/src/c_master_irda/: master_irda.cpp  master_irda.h
iDom_server_OOP/src/command/: command.cpp  command.h  commandhandler.cpp  commandhandler.h  commandhandlergateway.cpp  commandhandlergateway.h  commandhandlermqtt.cpp  commandhandlermqtt.h  commandhandlerroot.cpp  commandhandlerroot.h  commandhandlerrs232.cpp  commandhandlerrs232.h
iDom_server_OOP/src/dbClient/: DB_DATA.hpp  db-client-factory.cpp  db-client-factory.hpp  db-client-if.hpp  db-client.cpp  db-client.hpp
iDom_server_OOP/src/files_tree/: files_tree.cpp  files_tree.h  main.cpp
iDom_server_OOP/src/functions/: functions.cpp  functions.h  functions2.cpp  mpd_cli.cpp  mpd_cli.h
iDom_server_OOP/src/home_lighting/: house_lighting_handler.cpp  house_lighting_handler.h  house_room.cpp  house_room.h  light_bulb.cpp  light_bulb.h
iDom_server_OOP/src/iDomKEY_ACCESS/: idomkey_access.cpp  idomkey_access.h
iDom_server_OOP/src/iDomSaveState/: idom_save_state.cpp  idom_save_state.h
iDom_server_OOP/src/iDomStatus/: idomstatus.cpp  idomstatus.h
iDom_server_OOP/src/iDomTools/: idomtools.cpp  idomtools.h  idomtools_interface.h  idomtools_mpd.cpp  idomtools_system.cpp  idomtools_useful.h  lightning.cpp  lightning.h  main.cpp  test-iDomTools.pro
iDom_server_OOP/src/logger/: logger.cc  logger.hpp
iDom_server_OOP/src/menu_tree/: main.cpp  menu_tree.cpp  menu_tree.h
iDom_server_OOP/src/parser/: parser.cpp  parser.hpp
iDom_server_OOP/src/recuperator/: recuperator.cpp  recuperator.h  recuperator_interface.h
iDom_server_OOP/src/thread_functions/: iDom_thread.cpp  iDom_thread.h  rs232_thread.h
iDom_server_OOP/test/: nodeTest.sh
iDom_server_OOP/test/config/: bulb_config.json  button_config.json  config_iDom.json  cron.yaml  cron_one.yaml
iDom_server_OOP/test/iDom-test/: iDom-test.pro  main.cpp
iDom_server_OOP/test/iDom_TESTs-CMAKE/: .gitignore  CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  iDom_TESTs-CMAKE  main.cpp  test_data.h
iDom_server_OOP/test/scripts/: codeCoverage.sh  codeCoverage2.sh  coverage.txt  default.profraw  iDom_conn_null.py  iDom_fake_conn.py  iDom_trafic.py  malinaCodeCoverage.sh  report.txt
iDom_server_OOP/test/test_rs232/: CMakeLists.txt  main.cpp
koko/: CMakeLists.txt  LiquidCrystal_I2C.h  cmake_install.cmake  koko  main.cpp
olimpiada/olimpiada/: CMakeLists.txt  main.cpp  olimpiada
test/: b  (+6 more)
(+666 files in other folders)
